[package]
name = "lutwidge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", default-features = false, features = ["std", "color", "help", "usage", "derive", "cargo"] }
dirs = { version = "5.0", default-features = false }
fs_extra = { version = "1.3.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["default-tls", "blocking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"